FSAR-42: Quote - Fix on IE11

--- a/src/components/article/QuoteBlock/quoteBlock.scss
+++ b/src/components/article/QuoteBlock/quoteBlock.scss
@@ -22,6 +22,7 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
   &__quote {
     p {
